--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/typeorm": "^10.0.0",
     "@types/multer": "^1.4.7",
+    "exceljs": "^4.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
     "reflect-metadata": "^0.1.13",
